# newpath

./: README.md  build-all.sh  newpath.c
.github/workflows/: c89.yaml  mine.yaml
c89/: build.sh  c89  cli.c  cppref.h  pathway  pathway.c  user-install.sh  way.c  way.h
c89-char/: .gitignore  build.sh  cli.c  way.c  way.h
c99/: ap  argparse.c  pathway.c
cxx98/: build.sh  cli.cc
go/: .gitignore  build.sh  cli.go  go.mod  main.go  pathway.go  way.go
go/api/: way.go
java/: cli.java
node/: _node.sh  node.sh  npm.sh  package.json
py3/: .gitignore  README.md  setup.cfg  way.py
py3/src/way/: __init__.py  api.py  cli.py
py3/src/way.egg-info/: PKG-INFO  SOURCES.txt
rust/way/: Cargo.toml
rust/way/src/: main.rs
test/: test-cli-utf8.sh  test-cli.sh
