[metadata]

name = way
version = 0.0.1
author = Vincent Agriesti
author_email = vinnie@vinnie.work
description = Path manipulation utility.
long_description = file: README.md
lone_description_content_type = text/markdown
url = https://github.com/third-party-dev/pathway
project_urls =
    Bug Tracker = https://github.com/thirdy-party-dev/pathway/issues
classifiers =
    License :: OSI Approvide :: MIT License

[options]
package_dir =
    = src
package = find:
python_requires = >=3.6

[options.packages.find]
where = src

